# claude-manager

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
docs/plans/: 2026-01-25-claude-manager-design.md  2026-01-25-claude-manager-implementation.md  2026-02-20-local-only-implementation.md  2026-02-20-local-only-redesign.md  2026-02-21-v0.2.0-implementation.md  2026-02-21-v0.2.0-improvements-design.md
src/: app.rs  config.rs  db.rs  detect.rs  errors.rs  gh.rs  git_status.rs  git_worker.rs  machine.rs  main.rs  ports.rs  process.rs  scanner.rs  store.rs  sync.rs  theme.rs  tui.rs  updater.rs
src/ui/: input.rs  mod.rs  selector.rs
