[package]
name = "claude-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["bracketed-paste"] }
dirs = "5"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
