[package]
name = "claude-manager"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["bracketed-paste"] }
dirs = "5"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
